# agent-panel

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  config.example.yaml  models.yaml
src/: config.rs  config_files.rs  function.rs  function_calling.rs  function_calling_new.rs  input.rs  lib.rs  logger.rs  main.rs  role.rs  serve.rs  stream.rs  tiktoken.rs  utils.rs
src/client/: azure_openai.rs  claude.rs  common.rs  ernie.rs  gemini.rs  mistral.rs  mod.rs  model.rs  moonshot.rs  ollama.rs  openai.rs  openai_compatible.rs  qianwen.rs  vertexai.rs
src/config/: input.rs  mod.rs  session.rs
src/message/: message.rs
src/render/: markdown.rs  mod.rs
src/session/: mod.rs  session.rs  session_state.rs
src/utils/: mod.rs  newhssare.rs  share.rs
