[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.syntect]
version = "5.0.0"
default-features = false
features = ["parsing", "regex-onig", "plist-load"]


[dependencies]
tokio = { version = "1.34.0", features = ["rt", "time", "macros", "signal"] }
async-trait = "0.1.74"
bitflags = "2.5.0"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
base64 = "0.22.0"
parking_lot = "0.12.1"
fancy-regex = "0.13.0"
bstr = "1.8.0"
mime_guess = "2.0.4"
unicode-width = "0.1.11"
sha2 = "0.10.8"
dirs = "5.0.0"
ansi_colours = "1.2.2"
crossterm = { version = "0.27.0", features = ["use-dev-tty"] }
textwrap = "0.16.0"
is-terminal = "0.4.9"
nu-ansi-term = "0.50.0"
bincode = "1.3.3"
reqwest-eventsource = "0.6.0"
chrono = "0.4.23"
futures = "0.3.28"
crossbeam = "0.8.2"
inquire = "0.7.0"
futures-util = "0.3.29"
tiktoken-rs = "0.4.5"

serde = { version = "1.0", features = ["derive"] }
# Add any other dependencies required for `RepoRef` or other types used.
serde_json = "1.0"
serde_yaml = "0.9.34"
reqwest = { version = "0.12.2", features = [
    "json",
    "multipart",
    "socks",
    "rustls-tls",
    "rustls-tls-native-roots",
] }
anyhow = "1.0.71"
log = "0.4.14"